# VSExam

./: .gitignore  README.md
572/data/data converter/Converter/: Converter.cpp  Converter.sln
572/metadata/: Ofoten 2pkt 2014_Flystriper.dbf  Ofoten 2pkt 2014_Flystriper.shx  Ofoten 2pkt 2014_Klippefil.sos  Ofoten 2pkt 2014_Prosjektavgrensning.shp  Ofoten 2pkt 2014_Punkttetthet_DOM.pgw  Ofoten 2pkt 2014_Punkttetthet_DOM.png.aux.xml  Ofoten 2pkt 2014_Punkttetthet_DTM.png.aux.xml  Ofoten 2pkt 2014_Punkttetthet_DTM.tif.aux.xml  Ofoten 2pkt 2014_Tileinndeling.shx  Ofoten 2pkt 2014_Tileinndeling.sos
Renderer/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Logger.cpp  Logger.h  MacMetalBridge.mm  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mesh.cpp  Mesh.h  README.md  Renderer.cpp  Renderer.h  Texture.h  Transform.h  Utilities.h  Vertex.h  main.cpp
Renderer/Shaders/: CompileShaders.bat  CompileShadersMac.sh  PhongShader.frag  PhongShader.vert  Shader.frag  Shader.vert
data/: importlas.py
data/data converter/Converter/: Converter.vcxproj
metadata/: Ofoten 2pkt 2014_Flystripe.sos  Ofoten 2pkt 2014_Flystriper.shp  Ofoten 2pkt 2014_Klippefil.dbf  Ofoten 2pkt 2014_Klippefil.shp  Ofoten 2pkt 2014_Klippefil.shx  Ofoten 2pkt 2014_Prosjektavgrensning.dbf  Ofoten 2pkt 2014_Prosjektavgrensning.shx  Ofoten 2pkt 2014_Prosjektavgrensning.sos  Ofoten 2pkt 2014_Punkttetthet_DOM.tif.aux.xml  Ofoten 2pkt 2014_Tileinndeling.dbf  Ofoten 2pkt 2014_Tileinndeling.shp
